Changed Projects to have fixed height and left aligned

--- a/src/components/LanguagePill/LanguagePill.scss
+++ b/src/components/LanguagePill/LanguagePill.scss
@@ -3,7 +3,7 @@
   /* Display & Box Model */
   display: grid;
   place-items: center;
-  margin: 0 4px;
+  margin-right: 8px;
   border-radius: 20px;
   padding: 6px 12px 4px 12px;
 
@@ -18,47 +18,47 @@
 
 @media (min-width: $screenWidthB1) {
   .LanguagePill {
-    margin: 0 4px;
+    margin-right: 8px;
     padding: 6px 8px 3px 8px;
   }
 }
 
 @media (min-width: $screenWidthB2) {
   .LanguagePill {
-    margin: 0 4px;
-  border-radius: 20px;
-  padding: 6px 8px 3px 8px;
+    margin-right: 8px;
+    border-radius: 20px;
+    padding: 6px 8px 3px 8px;
   }
 }
 
 @media (min-width: $screenWidthB3) {
   .LanguagePill {
-    margin: 0 6px;
-  border-radius: 20px;
-  padding: 6px 12px 3px 12px;
+    margin-right: 12px;
+    border-radius: 20px;
+    padding: 6px 12px 3px 12px;
   }
 }
 
 @media (min-width: $screenWidthB4) {
   .LanguagePill {
-    margin: 0 6px;
-  border-radius: 20px;
-  padding: 6px 12px 3px 12px;
+    margin-right: 12px;
+    border-radius: 20px;
+    padding: 6px 12px 3px 12px;
   }
 }
 
 @media (min-width: $screenWidthB5) {
   .LanguagePill {
-    margin: 0 8px;
-  border-radius: 20px;
-  padding: 6px 16px 3px 16px;
+    margin-right: 16px;
+    border-radius: 20px;
+    padding: 6px 16px 3px 16px;
   }
 }
 
 @media (min-width: $screenWidthB6) {
   .LanguagePill {
-    margin: 0 8px;
+    margin-right: 16px;
     padding: 6px 20px 3px 20px;
-  border-radius: 40px;
-}
+    border-radius: 40px;
+  }
 }
