--- a/src/components/Projects/Project/Project.scss
+++ b/src/components/Projects/Project/Project.scss
@@ -14,8 +14,9 @@
   border: 2px solid rgba(100, 100, 100, 0.1);
 
   .ProjectImage {
-    height: 100%;
+    height: 340px;
     width: 100%;
+    object-fit: cover;
     a {
       img {
         width: 100%;
@@ -33,7 +34,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
+    text-align: left;
 
     h4 {
       /* Display & Box Model */
@@ -83,11 +84,11 @@
     .ProjectDescription {
       /* Display & Box Model */
       justify-content: flex-start;
-      align-items: flex-end;
+      align-items: flex-start;
       width: 100%;
 
       /* Other */
-      text-align: right;
+      text-align: left;
 
       h4 {
         /* Display & Box Model */
@@ -107,7 +108,7 @@
 
     .ProjectLinks {
       /* Display & Box Model */
-      justify-content: flex-end;
+      justify-content: flex-start;
 
       img {
         /* Display & Box Model */
@@ -154,7 +155,7 @@
       .pills {
         /* Display & Box Model */
         margin-bottom: 20px;
-        margin-left: 16px;
+        margin-right: 16px;
       }
     }
 
@@ -186,7 +187,7 @@
       .pills {
         /* Display & Box Model */
         margin-bottom: 20px;
-        margin-left: 16px;
+        margin-right: 16px;
       }
     }
 
@@ -216,7 +217,7 @@
 
       .pills {
         /* Display & Box Model */
-        margin-left: 16px;
+        margin-right: 16px;
         margin-bottom: 24px;
       }
     }
@@ -252,7 +253,7 @@
       .pills {
         /* Display & Box Model */
         margin-bottom: 28px;
-        margin-left: 16px;
+        margin-right: 16px;
       }
     }
 
@@ -284,7 +285,7 @@
       .pills {
         /* Display & Box Model */
         margin-bottom: 24px;
-        margin-left: 16px;
+        // margin-right: 16px;
       }
     }
 
